@@ -1,6 +1,6 @@
 package oochess.app.discordintegration;
 
-import sun.security.krb5.Config;
+import java.lang.reflect.InvocationTargetException;
 
 public class EnviaNotificacaoFactory {
 	private static EnviaNotificacaoFactory INSTANCE = null;
@@ -14,16 +14,16 @@ public class EnviaNotificacaoFactory {
 			return INSTANCE;
 	}
 	
-	
-	
+
 	public EnviaNotificacao getEnviaNotificacao() {
 		String type= MyConfiguration.getINSTANCE().getString("DISCORD_CLASS");
 		
 		try {
 			Class<EnviaNotificacao> notificadorClass = (Class<EnviaNotificacao>) Class.forName(type); 
-			return notificadorClass.newInstance();
+			return notificadorClass.getDeclaredConstructor().newInstance();
 			
-		} catch (ClassNotFoundException | IllegalAccessException | InstantiationException e1) {
+		} catch (ClassNotFoundException | IllegalAccessException | InstantiationException | NoSuchMethodException |
+                InvocationTargetException e1) {
             return new notificadorNaoSuportado(); 
         } 
 			
